--- a/index.html
+++ b/index.html
@@ -6,9 +6,12 @@
   <meta name="description" content="ibiam course Home page">
   <meta name="author" content="ifegwu ibiam ifeanyi">
   <title>Ibiam - Course Home Page</title>
-  <link rel="stylesheet" href="styles/styles.css">
   <script src="scripts/home.js" defer></script>
   <script src="scripts/getdate.js" defer></script>
+  <link rel="stylesheet" href="styles/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -50,7 +53,6 @@
       <button onclick="filterCourses('WDD')">WDD</button>
     </div>
     <div id="course-list"></div>
-    </div>
   </section>
 </main>
 
@@ -59,7 +61,7 @@
     <p>Abia State Nigeria &bull; Nigeria</p>
     <p>Last Modified: <span id="last-modified"></span></p>
 </footer>
-</footer>
+
 
 </body>
 </html>
