--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -6,11 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Chamber of Commerce for AlaNkporo, showcasing local businesses and events.">
     <meta name="author" content="Ifegwu Ibiam Ifeanyi">
-    <meta property="og:title" content="AlaNkporo Chamber of Commerce" />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://images.png" />
-    <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html
-    " />
+    <meta property="og:title" content="AlaNkporo Chamber of Commerce"/>
+    <meta property="og:type" content='website'/>
+    <meta property="og:image" content="https://images.png"/>
+    <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html"/>
     <title>AlaNkporo Chamber of Commerce</title>
     <script src="scripts/scripts.js" defer></script>
     <link rel="icon" href="favicon.ico" type="images/favicon.ico">
@@ -36,7 +35,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/niger.jpg" alt="Scalable, responsive hero image" width="300px" height="200">
+            <img src="images/niger.jpg" alt="Scalable, responsive hero image">
             <button class="keynote">Keynote Tickets</button>
         </section>
 
