--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Chamber of Commerce for AlaNkporo, showcasing local businesses and events.">
     <meta name="author" content="Ifegwu Ibiam Ifeanyi">
     <meta property="og:title" content="AlaNkporo Chamber of Commerce"/>
-    <meta property="og:type" content='website'/>
+    <meta property="og:type" content="website"/>
     <meta property="og:image" content="https://images.png"/>
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html"/>
     <title>AlaNkporo Chamber of Commerce</title>
@@ -75,8 +75,15 @@
 
     <footer>
         <p>AlaNkporo Chamber of Commerce</p>
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="facebook"></a>
+        <a href="https://twitter.com">
+            <img src="images/twitter.png" alt="twitter"></a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.png" alt="instagram"></a>    
         <p>&copy; <span id="year"></span> Ifegwu Ibiam Ifeanyi | Last modified: <span id="lastModified"></span></p>
         <p>This is a Chamber Class Project</p>
+
     </footer>
 
 
