--- a/index.html
+++ b/index.html
@@ -1,67 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="description" content="ibiam course Home page">
-  <meta name="author" content="ifegwu ibiam ifeanyi">
-  <title>Ibiam - Course Home Page</title>
-  <script src="scripts/home.js" defer></script>
-  <script src="scripts/getdate.js" defer></script>
-  <link rel="stylesheet" href="styles/styles.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Arsenal+SC:ital,wght@0,400;0,700;1,400;1,700&family=Roboto:ital,wght@0,100;0,400;1,100&display=swap" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Chamber of Commerce for AlaNkporo, showcasing local businesses and events.">
+    <meta name="author" content="Ifegwu Ibiam Ifeanyi">
+    <meta property="og:title" content="AlaNkporo Chamber of Commerce">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://images.png">
+    <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
+    <title>AlaNkporo Chamber of Commerce</title>
+    <script src="scripts/chamber.js" defer></script>
+    <link rel="icon" href="favicon.ico" type="images/favicon.ico">
+    <link rel="stylesheet" href="styles/large.css">
 </head>
+
 <body>
+    <header>
+        <div class="logo">
+            <img src="images/images.jpg" alt="AlaNkporo Chamber of Commerce Logo">
+            <h1>AlaNkporo Chamber of Commerce</h1>
+        </div>
+        <button class="hamburger" aria-label="Toggle navigation">
+            &#9776; <!-- Hamburger Icon -->
+        </button>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#">Directory</a></li>
+                <li><a href="join.html">Join</a></li>
+                <li><a href="#">Discover</a></li>
+            </ul>
+            <button class="toggle-theme">Toggle Theme</button>
+        </nav>
+    </header>
 
-<header>
-  <img src="images/profile.jpg" alt="Ifegwu Ibiam Ifeanyi" width="200">
-  <h1>Ifegwu Ibiam Ifeanyi</h1>
-  <button id="menu-toggle" aria-label="Toggle navigation">☰</button>
-  <nav>
-    <ul id="nav-list">
-      <li><a href="index.html">Home</a></li>
-      <li><a href="#">Chamber</a></li>
-      <li><a href="https://github.com/">GitHub Profile</a></li>
-      <li><a href="https://www.linkedin.com/in/ifeanyi-chukwu-ibiam-0b44a927a">LinkedIn</a></li>
-    </ul>
-  </nav>
-</header>
+    <main>
+        <!-- Hero Section -->
+        <div class="hero">
+            <br>
+            <img src="images/niger.jpg" alt="Scalable, responsive hero image">
+        </div>
 
-<main>
-  <section>
-    <h2>Course Work</h2>
-    <ul>
-      <li></li>
-      <li></li>
-      <li></li>
-    </ul>
-  </section>
+        <!-- Call to Action Section -->
+        <section class="call-to-action">
+            <h2>Join the Chamber</h2>
+            <br>
+            <a href="join.html" class="cta-button">Join the Chamber</a>
+        </section>
 
-  <section>
-    <h2>Abuja, Nigeria</h2>
-    <img src="images/nigeria.png" alt="aso rock Villa" width="200">
-    <p>Aso Rock Villa</p>
-  </section>
+        <!-- Events and Weather Section -->
+        <section class="info">
+            <div class="events">
+                <h2>Events</h2>
+                <p>Stay tuned for upcoming community events and meetings.</p>
+            </div>
 
-  <section>
-    <h2>Web and Computer Programming Certificates</h2>
-    <div class="filter-buttons">
-      <button onclick="filterCourses('All')">All</button>
-      <button onclick="filterCourses('CSE')">CSE</button>
-      <button onclick="filterCourses('WDD')">WDD</button>
-    </div>
-    <div id="course-list"></div>
-  </section>
-</main>
+            <!-- Weather Section -->
+            <div class="weather-icon">
+                <h2>Current Weather <span>⛅</span></h2>
+                <div id="weather-info">
+                    <p>Loading weather data...</p>
+                </div>
+            </div>
 
-<footer>
-    <p>&copy; <span id="current-year"></span> Home Page. All rights reserved.</p>
-    <p>Abia State Nigeria &bull; Nigeria</p>
-    <p>Last Modified: <span id="last-modified"></span></p>
-</footer>
+            <div class="weather-forecast">
+                <h2>Weather Forecast</h2>
+                <div id="forecast">
+                    <p>Loading forecast...</p>
+                </div>
+            </div>
+        </section>
 
+        <!-- Company Spotlights Section -->
+        <section class="company-spotlights">
+            <h2>Business Spotlights</h2>
+
+            <div class="spotlights">
+                <h3>Business Name</h3>
+                <p>Business Tag Line</p>
+                <p>Email: info@gmail.com</p>
+                <p>Phone: 800-555-1234</p>
+                <p>URL: <a href="#">mybusiness.com</a></p>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>AlaNkporo Chamber of Commerce</p>
+        <a href="https://facebook.com">
+            <img src="images/facebook.png" alt="facebook"></a>
+        <a href="https://twitter.com">
+            <img src="images/twitter.png" alt="twitter"></a>
+        <a href="https://instagram.com">
+            <img src="images/instagram.png" alt="instagram"></a>
+        <p>&copy; <span id="year"></span> Ifegwu Ibiam Ifeanyi | Last modified: <span id="lastModified"></span></p>
+        <p>This is a Chamber Class Project</p>
+    </footer>
 
 </body>
+
 </html>
