--- a/chamber/join.html
+++ b/chamber/join.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chamber of Commerce for AlaNkporo, showcasing local businesses and events.">
+    <meta name="description" content="Chamber of Commerce for IbiamIfy, showcasing local businesses and events.">
     <meta name="author" content="Ifegwu Ibiam Ifeanyi">
-    <meta property="og:title" content="AlaNkporo Chamber of Commerce">
+    <meta property="og:title" content="IbiamIfy Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.png">
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
-    <title>AlaNkporo Chamber of Commerce</title>
+    <title>IbiamIfy Chamber of Commerce</title>
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/join.js" defer></script>
     <link rel="icon" href="favicon.ico" type="images/favicon.ico">
@@ -22,8 +22,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/images.jpg" alt="AlaNkporo Chamber of Commerce Logo">
-            <h1>AlaNkporo Chamber of Commerce</h1>
+            <img src="images/images.jpg" alt="IbiamIfy Chamber of Commerce Logo">
+            <h1>IbiamIfy Chamber of Commerce</h1>
         </div>
         <button class="hamburger" aria-label="Toggle navigation">
             &#9776; <!-- Hamburger Icon -->
@@ -40,7 +40,7 @@
 
     <main>
         <!-- Membership Form -->
-        <h2>Join the AlaNkporo Chamber of Commerce</h2>
+        <h2>Join the Ibiamify Chamber of Commerce</h2>
         <form action="thankyou.html" method="get" autocomplete="on">
             <label for="firstname">First Name:
                 <input type="text" id="firstname" name="firstname" title="Enter your first name" autocomplete="given-name" required>
@@ -68,6 +68,7 @@
 
             <label for="membership-level">Membership Level:
                 <select id="membership-level" name="membership-level" title="Select membership level" required>
+                    <option value="" selected disabled>choose one...</option>
                     <option value="NP Membership">NP Membership - Free</option>
                     <option value="Bronze Membership">Bronze Membership</option>
                     <option value="Silver Membership">Silver Membership</option>
@@ -138,7 +139,7 @@
     </main>
 
     <footer>
-        <p>AlaNkporo Chamber of Commerce</p>
+        <p>IbiamIfy Chamber of Commerce</p>
         <a href="https://facebook.com">
             <img src="images/facebook.png" alt="facebook"></a>
         <a href="https://twitter.com">
