--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Thank you for submitting your application to AlaNkporo Chamber of Commerce">
+    <meta name="description" content="Thank you for submitting your application to IbiamIfy Chamber of Commerce">
     <meta name="author" content="Ifegwu Ibiam Ifeanyi">
-    <title>Thank You | AlaNkporo Chamber of Commerce</title>
+    <title>Thank You | IbiamIfy Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/join.css">
     <link rel="stylesheet" href="styles/large.css">
     <script src="scripts/thankyou.js" defer></script>
@@ -16,7 +16,7 @@
     <header>
         <div class="logo">
             <img src="images/images.jpg" alt="AlaNkporo Chamber of Commerce Logo">
-            <h1>AlaNkporo Chamber of Commerce</h1>
+            <h1>IbiamIfy Chamber of Commerce</h1>
         </div>
         <nav>
             <ul>
