--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Chamber of Commerce for AlaNkporo, showcasing local businesses and events.">
+    <meta name="description" content="Chamber of Commerce for IbiamIfy, showcasing local businesses and events.">
     <meta name="author" content="Ifegwu Ibiam Ifeanyi">
-    <meta property="og:title" content="AlaNkporo Chamber of Commerce">
+    <meta property="og:title" content="IbiamIfy Chamber of Commerce">
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.png">
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
-    <title>AlaNkporo Chamber of Commerce</title>
+    <title>IbiamIfy Chamber of Commerce</title>
     <script src="scripts/scripts.js" defer></script>
     <link rel="icon" href="favicon.ico" type="images/favicon.ico">
     <link rel="stylesheet" href="styles/large.css">
@@ -19,8 +19,8 @@
 <body>
     <header>
         <div class="logo">
-            <img src="images/images.jpg" alt="AlaNkporo Chamber of Commerce Logo">
-            <h1>AlaNkporo Chamber of Commerce</h1>
+            <img src="images/images.jpg" alt="IbiamIfy Chamber of Commerce Logo">
+            <h1>IbiamIfy Chamber of Commerce</h1>
         </div>
         <button class="hamburger" aria-label="Toggle navigation">
             &#9776; <!-- Hamburger Icon -->
@@ -28,7 +28,7 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
                 <li><a href="#">Discover</a></li>
             </ul>
@@ -77,7 +77,7 @@
     </main>
 
     <footer>
-        <p>AlaNkporo Chamber of Commerce</p>
+        <p>IbiamIfy Chamber of Commerce</p>
         <a href="https://facebook.com">
             <img src="images/facebook.png" alt="facebook"></a>
         <a href="https://twitter.com">
