--- a/chamber/index.html
+++ b/chamber/index.html
@@ -12,7 +12,7 @@
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
     <title>IbiamIfy Chamber of Commerce</title>
     <script src="scripts/chamber.js" defer></script>
-    <link rel="icon" href="favicon.ico" type="images/favicon.ico">
+    <link rel="icon" type="images/favicon.Icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/large.css">
 </head>
 
@@ -30,7 +30,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
             <button class="toggle-theme">Toggle Theme</button>
         </nav>
@@ -40,7 +40,7 @@
         <!-- Hero Section -->
         <div class="hero">
             <br>
-            <img src="images/niger.jpg" alt="Scalable, responsive hero image">
+            <img src="images/international-chamber-of-commerce.webp" alt="group of people">
         </div>
 
         <!-- Call to Action Section -->
