--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -12,7 +12,8 @@
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
     <title>IbiamIfy Chamber of Commerce</title>
     <script src="scripts/scripts.js" defer></script>
-    <link rel="icon" href="favicon.ico" type="images/favicon.ico">
+    <script src="scripts/chamber.js" defer></script>
+    <link rel="icon" type="images/favicon.Icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/large.css">
 </head>
 
@@ -38,14 +39,25 @@
 
     <main>
         <section class="hero">
-            <img src="images/niger.jpg" alt="Scalable, responsive hero image">
+            <img src="images/international-chamber-of-commerce.webp" alt="group of people">
             <button class="keynote">Keynote Tickets</button>
         </section>
 
         <section class="info">
             <div class="events">
                 <h2>Events</h2>
-                <!-- Event content -->
+                <ul>
+                    <li><strong>June 24, 2024:</strong> Summer Networking Event</li>
+                    <li><strong>July 4, 2024:</strong> Independence Day Parade</li>
+                    <li><strong>August 12, 2024:</strong> Annual Charity Gala</li>
+                    <li><strong>September 15, 2024:</strong> Community Picnic in the Park</li>
+                    <li><strong>October 30, 2024:</strong> Halloween Spooktacular</li>
+                    <li><strong>November 28, 2024:</strong> Thanksgiving Celebration & Dinner</li>
+                    <li><strong>December 24, 2024:</strong> Christmas Eve Gala</li>
+                    <li><strong>January 1, 2025:</strong> New Year's Day Business Brunch</li>
+                    <li><strong>February 14, 2025:</strong> Valentine's Day Fundraiser</li>
+                </ul>
+                
             </div>
 
             <div class="weather-icon">
@@ -79,11 +91,11 @@
     <footer>
         <p>IbiamIfy Chamber of Commerce</p>
         <a href="https://facebook.com">
-            <img src="images/facebook.png" alt="facebook"></a>
+            <img src="images/facebook.png" width="42" height="42" alt="facebook"></a>
         <a href="https://twitter.com">
-            <img src="images/twitter.png" alt="twitter"></a>
+            <img src="images/twitter.png" width="42" height="42" alt="twitter"></a>
         <a href="https://instagram.com">
-            <img src="images/instagram.png" alt="instagram"></a>    
+            <img src="images/instagram.png" width="42" height="42" alt="instagram"></a>    
         <p>&copy; <span id="year"></span> Ifegwu Ibiam Ifeanyi | Last modified: <span id="lastModified"></span></p>
         <p>This is a Chamber Class Project</p>
 
