--- a/chamber/join.html
+++ b/chamber/join.html
@@ -13,7 +13,8 @@
     <title>IbiamIfy Chamber of Commerce</title>
     <script src="scripts/chamber.js" defer></script>
     <script src="scripts/join.js" defer></script>
-    <link rel="icon" href="favicon.ico" type="images/favicon.ico">
+    
+    <link rel="icon" type="images/favicon.Icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/join.css">
     <link rel="stylesheet" href="styles/large.css">
     
@@ -31,9 +32,9 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="#">Directory</a></li>
+                <li><a href="index.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
@@ -55,7 +56,7 @@
             </label>
 
             <label for="email">Email:
-                <input type="email" id="email" name="email" title="Enter your email address" autocomplete="email" placeholder="example@domain.com" required>
+                <input type="email" id="email" name="email" title="Enter your email address" autocomplete="email" placeholder="example@gmail.com" required>
             </label>
 
             <label for="mobilephone">Mobile Phone:
