--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -9,6 +9,7 @@
     <title>Thank You | IbiamIfy Chamber of Commerce</title>
     <link rel="stylesheet" href="styles/join.css">
     <link rel="stylesheet" href="styles/large.css">
+    <link rel="icon" type="images/favicon.Icon" href="images/favicon.ico">
     <script src="scripts/thankyou.js" defer></script>
 </head>
 
@@ -23,7 +24,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li><a href="directory.html">Directory</a></li>
                 <li><a href="join.html">Join</a></li>
-                <li><a href="#">Discover</a></li>
+                <li><a href="discover.html">Discover</a></li>
             </ul>
         </nav>
     </header>
