--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -72,7 +72,8 @@
                 <div id="calendar-container"></div>
             </div>
         </aside>
-
+        <h2>our gallery</h2>
+        
         <section class="photo-gallery">
             <figure>
                 <img src="images/international-chamber-of-commerce.webp" width="300" height="300" alt="Beautiful Scene 1" loading="lazy">
