--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -9,7 +9,7 @@
     <meta property="og:type" content="website">
     <meta property="og:image" content="https://images.png">
     <meta property="og:url" content="https://ify1237ibiam.github.io/wdd231/chamber/directory.html">
-    <title>Discover</title>
+    <title> IbiamIfy Chamber of Commerce Discover</title>
     <link rel="icon" type="images/favicon.Icon" href="images/favicon.ico">
     <link rel="stylesheet" href="styles/large.css">
     <script src="scripts/chamber.js" defer></script>
