--- a/project/project.html
+++ b/project/project.html
@@ -32,7 +32,7 @@
 
     <main>
         <section class="hero">
-            <img src="images/travel.webp" alt="a girl looking away"> 
+            <img src="images/travel.webp" alt="a girl looking away" loading="lazy"> 
             <h1>Explore the World</h1>
             <p>Get inspired with our travel guides and expert tips.</p>
             <a href="destinations.html" class="btn">Start Exploring</a>
